--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar-container {
+  width: 100%;
+  height:50px;
+  background-color: #ED262C;
+  display: flex;
+  flex-direction: column;
+}
+
+.navbar-link-container {
+  display: flex;
+}
+
+.nav-link {
+  color:white;
+  font-size: x-large;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  margin: 10px;
+}
+
+.nav-link:hover, .nav-link:focus {
+  color: #F0ECD0;
+}
